package Game;

public class Main {
    public static void main(String[] args) throws InterruptedException {
        GameHandler myGame = new GameHandler();
        myGame.startGame();
    }
}
